<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="app_name">zipCloset</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="facebook_login">Login using Facebook</string>
    <string name="skip">Skip</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="goToClosetButton">Go To Closet</string>
    <string name="tagButton">TAG</string>
    <string name="zipButton">&quot;Zip and NFC Tag &quot;</string>
    <string name="tagHistory">Zip History</string>
    <string name="postToFacebook">Post To Facebook</string>
    <string name="title_activity_go_to_closet">GoToCloset</string>
    <string name="title_activity_zip">ZipActivity</string>
    <string name="title_activity_tags_history">TagsHistoryActivity</string>
    <string name="writeToTag">Write to Tag</string>
    <string name="loading">Loading</string>
    <string name="id">NFC_Tag_Id</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="purchase">Purchase Item</string>
    <string name="favorite">Favorite</string>
    <string name="favoriteButton">Add to Favorites</string>
    <string name="welcome">"Welcome to ZipCloset the first ever NFC enabled application designed to facilitate shopping and closet organization "</string>
    <string name="mainMenu">Main Menu</string>
    <string name="closetInfoText">Click Go to Closet to see a full Inventory of all the items in your closet.</string>
    <string name="zipInfo">Press Zip to open empty Clothing Information Page and Zip write an NFC Id to a tag</string>
    <string name="tagAnyTime">**As long as your NFC device is unlocked you can tag an NFC Clothing Tag!** i.e. on device home screen or anywhere in this app or anywhere in any app.</string>
    <string name="historyText">View a list of all the NFC Clothing Items you tagged</string>
    <string name="facebookposttext">Post Item To Facebook **Under Consturction**</string>
    <string name="histoyTextt">"List of all the Items you Tagged "</string>
    <string name="soon">**Time,date, and more information on clothing coming soon**</string>
    <string name="zipInfo2">This is your basic NFC Clothing Item Screen, Up top you will find basic information linked on a databse to that specific NFC Tag tha you tagged to get here. Below it are a pair of buttons to demonstrate a couple capabilities and an Image of the item is displayed</string>
    <string name="description_of_closet">Shows a picture, the brand, and the price of each object in each section of your closet respectively</string>
    <string name="description_closet">Shows a list of each favorite item when initially opened and uses the icons to the right to navigate through your closet.</string>
    <string name="ziplogin">Login Using ZipCloset</string>
    <string name="reg">Register on Zipp</string>
    <string name="unEmail">Username/Email</string>
    <string name="passworddd">Password</string>
    <string name="name">Full Name</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="lname">Last Name</string>
    <string name="fname">First Name</string>
    <string name="title_activity_register_new_account">Register New Account</string>
    <string name="title_activity_kinvey_activity">Kinvey Activity</string>

</resources>
