<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blueback"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenu" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/mainMenu"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="@dimen/Header" />

    <Button
        android:id="@+id/postToFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:text="@string/postToFacebook" />

    <EditText
        android:id="@+id/facebookPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/postToFacebook"
        android:layout_marginBottom="18dp"
        android:ems="10" />

    <Button
        android:id="@+id/goToClosetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/facebookPost"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="21dp"
        android:layout_marginTop="33dp"
        android:text="@string/goToClosetButton"
        android:textSize="@dimen/secondHeader" />

    <Button
        android:id="@+id/allZipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tagButton"
        android:layout_marginRight="34dp"
        android:layout_marginTop="114dp"
        android:text="@string/tagHistory"
        android:textSize="@dimen/secondHeader" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignRight="@+id/postToFacebook"
        android:layout_alignTop="@+id/allZipButton"
        android:text="@string/historyText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/facebookPost"
        android:layout_alignLeft="@+id/facebookPost"
        android:layout_marginBottom="46dp"
        android:layout_marginLeft="20dp"
        android:text="@string/facebookposttext"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tagButton"
        android:layout_toLeftOf="@+id/allZipButton"
        android:text="@string/zipInfo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/goToClosetButton"
        android:layout_toLeftOf="@+id/allZipButton"
        android:text="@string/closetInfoText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/tagButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/goToClosetButton"
        android:layout_alignRight="@+id/goToClosetButton"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="104dp"
        android:text="@string/zipButton"
        android:textSize="@dimen/secondHeader" />

</RelativeLayout>
